--- a/.github/workflows/test-flashlight.yml
+++ b/.github/workflows/test-flashlight.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build and run Docker Compose services
         run: |
-          docker-compose up -d
+          docker-compose up -d --wait
         working-directory: module-test
 
       - name: Download home page
